2007-10-08  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/canvas_group_resizable.cc:
	* glom/utility_widgets/canvas_group_resizable.h:
	* glom/utility_widgets/canvas_line_movable.cc:
	* glom/utility_widgets/canvas_line_movable.h:
	Allow resizing by dragging the edges. Keep the corners and 
	edges on top when moving.

2007-10-08  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/Makefile.am:
	* glom/utility_widgets/canvas_editable.cc:
	* glom/utility_widgets/canvas_editable.h:
	* glom/utility_widgets/canvas_group_resizable.cc:
	* glom/utility_widgets/canvas_group_resizable.h:
	* glom/utility_widgets/canvas_rect_movable.cc:
	* glom/utility_widgets/canvas_rect_movable.h:
	* glom/utility_widgets/test_canvas_editable.cc:
	Prevent an extra offset from being added when first dragging.

2007-10-08  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/canvas_editable.cc:
	* glom/utility_widgets/canvas_editable.h:
	* glom/utility_widgets/canvas_group_resizable.cc:
	* glom/utility_widgets/canvas_group_resizable.h:
	* glom/utility_widgets/canvas_rect_movable.cc:
	* glom/utility_widgets/canvas_rect_movable.h:
	* glom/utility_widgets/test_canvas_editable.cc:
	Use arrow cursors when dragging corners. Put drag-to-move code 
	in CanvasGroupResizable itself instead of in the canvas.

2007-10-08  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/canvas_editable.cc:
	* glom/utility_widgets/canvas_editable.h:
	* glom/utility_widgets/canvas_group_resizable.cc:
	* glom/utility_widgets/canvas_group_resizable.h:
	* glom/utility_widgets/canvas_rect_movable.cc: Mostly works, 
	but only for rectangles, not generic items.

2007-10-07  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/canvas_editable.h: More experimentation.

2007-10-05  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/Makefile.am:
	* glom/utility_widgets/canvas_editable.cc:
	* glom/utility_widgets/canvas_editable.h: